// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar component should render as expected 1`] = `
<div
  className="search-container"
>
  <form
    className="search"
    onSubmit={[Function]}
  >
    <input
      className="search-term"
      onChange={[Function]}
      placeholder="Enter a movie"
      value=""
    />
    <button
      className="search-button"
      type="submit"
    >
      <i
        className="fa fa-search"
      />
    </button>
  </form>
</div>
`;

exports[`component should receive props 1`] = `
<SearchBar
  formSubmit={[Function]}
>
  <div
    className="search-container"
  >
    <form
      className="search"
      onSubmit={[Function]}
    >
      <input
        className="search-term"
        onChange={[Function]}
        placeholder="Enter a movie"
        value=""
      />
      <button
        className="search-button"
        type="submit"
      >
        <i
          className="fa fa-search"
        />
      </button>
    </form>
  </div>
</SearchBar>
`;

exports[`onInputChange updates the title when typed into the input 1`] = `
<div
  className="search-container"
>
  <form
    className="search"
    onSubmit={[Function]}
  >
    <input
      className="search-term"
      onChange={[Function]}
      placeholder="Enter a movie"
      value="superman"
    />
    <button
      className="search-button"
      type="submit"
    >
      <i
        className="fa fa-search"
      />
    </button>
  </form>
</div>
`;
